# mas-rd-course-9

./: .gitignore  README.md  acp_server.py  config.py  ingest.py  main.py  mcp_utils.py  pyproject.toml  retriever.py  supervisor.py
mcp_servers/: report_mcp.py  search_mcp.py
output/: comparison_of_rag_approaches_naive_sentence_window_parent_child_long_self_rag.md
